--- a/app/index.html
+++ b/app/index.html
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>eCalc</title>
     <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-    <div class="display"></div>
-    <div class="first-row">
-      <button class="button">1</button>
-      <button class="button">2</button>
-      <button class="button">3</button>
-      <button class="button">+</button>
-    </div>
-    <div class="second-row">
-      <button class="button">4</button>
-      <button class="button">5</button>
-      <button class="button">6</button>
-      <button class="button">-</button>
-    </div>
-    <div class="first-row">
-      <button class="button">7</button>
-      <button class="button">8</button>
-      <button class="button">9</button>
-      <button class="button">/</button>
-    </div>
-    <div class="second-row">
-      <button class="button">,</button>
-      <button class="button">0</button>
-      <button class="button">=</button>
-      <button class="button">*</button>
+</head>
+
+<body>
+    <div class="display-container">
+        <div class="display"></div>
     </div>
 
-  </body>
+    <div class="first-row">
+        <button class="button">1</button>
+        <button class="button">2</button>
+        <button class="button">3</button>
+        <button class="button">+</button>
+    </div>
+    <div class="second-row">
+        <button class="button">4</button>
+        <button class="button">5</button>
+        <button class="button">6</button>
+        <button class="button">-</button>
+    </div>
+    <div class="first-row">
+        <button class="button">7</button>
+        <button class="button">8</button>
+        <button class="button">9</button>
+        <button class="button">/</button>
+    </div>
+    <div class="second-row">
+        <button class="button">,</button>
+        <button class="button">0</button>
+        <button class="button">=</button>
+        <button class="button">*</button>
+    </div>
+
+    <!-- bower:components start -->
+    <script>
+        window.$ = require('./bower_components/jquery/dist/jquery.min');
+    </script>
+    <!-- bower:components end -->
+    <script src="./js/InputService.js"></script>
+    <script src="./js/calc.js"></script>
+</body>
+
 </html>
